--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
 		</div>		
 	</div>
 
+	<div id='gamePromote'>
+		<p>You wanna X or O ?</p>
+		<br>
+		<button id="x">X</button>
+		<button id="o">O</button>
+	</div>
+
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="js/game.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
+
 </body>
 </html>
