add game tip to the page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
 		<button id="o">O</button>
 	</div>
 
+	<div id="game-info">
+		<label>X always goes first</label>
+	</div>
+
+	<div id="game-results">
+		<p>It's a tie!</p>
+	</div>
+
+	<div id="you-win">
+		<p>You win</p>
+	</div>
+
+	<div id="you-lost">
+		<p>You lost</p>
+	</div>
+
+	
+
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="js/game.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
