--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>	
-	<h1> Tic tac toe </h1>
+	<div id="header">
+		<h1> Tic tac toe </h1>
+		<div id="game-info">
+			<label>X always goes first ! GLHF</label>
+		</div>
+	</div>
 
 	<div id="container">
 		<div class="row">
@@ -32,9 +37,6 @@
 		<button id="o">O</button>
 	</div>
 
-	<div id="game-info">
-		<label>X always goes first</label>
-	</div>
 
 	<div id="game-results">
 		<p>It's a tie!</p>
