--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<div id="container">
-		<div class="row">
+		<!-- <div class="row">
 			<div id="id1">1</div>
 			<div id="id2">2</div>
 			<div id="id3">3</div>
@@ -27,7 +27,7 @@
 			<div id="id7">7</div>
 			<div id="id8">8</div>
 			<div id="id9">9</div>
-		</div>		
+		</div>		 -->
 	</div>
 
 	<div id='gamePromote'>
