--- a/index.html
+++ b/index.html
@@ -12,23 +12,7 @@
 		</div>
 	</div>
 
-	<div id="container">
-		<!-- <div class="row">
-			<div id="id1">1</div>
-			<div id="id2">2</div>
-			<div id="id3">3</div>
-		</div>
-		<div class="row">
-			<div id="id4">4</div>
-			<div id="id5">5</div>
-			<div id="id6">6</div>
-		</div>
-		<div class="row">
-			<div id="id7">7</div>
-			<div id="id8">8</div>
-			<div id="id9">9</div>
-		</div>		 -->
-	</div>
+	<div id="container"></div>
 
 	<div id='gamePromote'>
 		<p>You wanna X or O ?</p>
