add data-custom property

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<div id='gamePromote'>
 		<p>You wanna X or O ?</p>
 		<br>
-		<button id="x">X</button>
-		<button id="o">O</button>
+		<button id="x" data-value="X">X</button>
+		<button id="o" data-value="O">O</button>
 	</div>
 
 
